Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Mỹ nhân điền kinh Trung Quốc thừa nhận Olympic 'quá tầm'",
+    "content": "Wu Yanni, một vận động viên điền kinh nữ nổi tiếng của Trung Quốc, đã thừa nhận rằng việc cạnh tranh tại Olympic là một mục tiêu quá tầm với cô. Dù vừa lập kỷ lục quốc gia ở nội dung 60m rào và có thành tích tốt thứ tư châu Á, Yanni vẫn cảm thấy khoảng cách với các đối thủ đến từ châu Âu và Mỹ là rất lớn. Cô cho biết sẽ tiếp tục nỗ lực để nâng cao kỹ thuật và hướng tới việc phá kỷ lục quốc gia ở nội dung 100m rào.",
+    "link": "https://vnexpress.net/my-nhan-dien-kinh-trung-quoc-thua-nhan-olympic-qua-tam-4865869.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Wu Yanni cảm thấy mục tiêu Olympic có quá tầm không?",
+    "answers": [
+      {
+        "text": "Có",
+        "correct": true
+      },
+      {
+        "text": "Không",
+        "correct": false
+      },
+      {
+        "text": "Chưa rõ",
+        "correct": false
+      },
+      {
+        "text": "Đúng",
+        "correct": false
+      },
+      {
+        "text": "Sai",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Haaland giúp Na Uy toàn thắng tại vòng loại World Cup 2026",
     "content": "Erling Haaland đã ghi bàn quan trọng giúp Na Uy đánh bại Israel với tỷ số 4-2 trong khuôn khổ vòng loại World Cup 2026. Na Uy hiện đang dẫn đầu bảng I sau hai trận toàn thắng, với tổng cộng 6 điểm và 9 bàn thắng. Martin Odegaard cũng có một màn trình diễn xuất sắc với ba pha kiến tạo trong trận đấu này. Na Uy sẽ tiếp tục cạnh tranh với Italy cho tấm vé tham dự World Cup sắp tới.",
     "link": "https://vnexpress.net/haaland-giup-na-uy-toan-thang-tai-vong-loai-world-cup-2026-4865862.html",
@@ -135,28 +166,28 @@
     ]
   },
   {
-    "title": "Diễn viên \"Mùi ngò gai\" giải nghệ sang Mỹ: Luôn nhớ quê, phát hiện khối u",
-    "content": "Nghệ sĩ Minh Hoàng, nổi tiếng với vai diễn trong phim \"Mùi ngò gai\", đã chọn định cư tại Mỹ từ năm 2022. Mặc dù đã tuyên bố giải nghệ, ông vẫn thể hiện tình yêu với nghệ thuật bằng cách trở lại tham gia một dự án phim mới. Gần đây, ông gặp phải lo ngại về sức khỏe khi bác sĩ phát hiện một khối u ở phổi, nhưng sau nhiều kiểm tra, may mắn là đó chỉ là u lành tính. Ông chia sẻ rằng cuộc sống ở xứ người mang lại cho ông nhiều kỷ niệm và sự bình yên, mặc dù luôn nhớ quê hương.",
-    "link": "https://dantri.com.vn/giai-tri/dien-vien-mui-ngo-gai-giai-nghe-sang-my-luon-nho-que-phat-hien-khoi-u-20250325150310170.htm",
-    "cat": "giai-tri",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Nghệ sĩ Minh Hoàng đã gặp vấn đề gì về sức khỏe gần đây?",
+    "title": "Cả xóm 'biến' xe kéo lúa thành xe đón dâu độc đáo",
+    "content": "Tại xã Hùng Tiến, huyện Nam Đàn, Nghệ An, ông Nguyễn Văn Lộc cùng với bà con trong xóm đã cải tạo một chiếc xe kéo lúa thành xe đón dâu độc đáo cho đám cưới của đôi trẻ Nguyễn Văn Mạnh và Nguyễn Thu Hiền. Chiếc xe được trang trí kỳ công với hoa và bóng bay, mang lại kỷ niệm đáng nhớ cho ngày trọng đại. Đám cưới không chỉ tạo nên không khí vui vẻ mà còn thể hiện tình cảm và sự gắn kết của cộng đồng.",
+    "link": "https://vnexpress.net/ca-xom-bien-xe-keo-lua-thanh-xe-don-dau-doc-dao-4865817.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Cộng đồng đã làm gì để tạo nên chiếc xe đón dâu đặc biệt cho đôi trẻ?",
     "answers": [
       {
-        "text": "Khối u ở phổi",
+        "text": "Cải tạo xe kéo lúa thành xe đón dâu",
         "correct": true
       },
       {
-        "text": "Đau tim",
+        "text": "Thiết kế một chiếc xe máy mới",
         "correct": false
       },
       {
-        "text": "Cúm nặng",
+        "text": "Thuê xe đón dâu từ ngoài",
         "correct": false
       },
       {
-        "text": "Gãy xương chân",
+        "text": "Mua một chiếc xe mới hoàn toàn",
         "correct": false
       }
     ]
@@ -189,28 +220,28 @@
     ]
   },
   {
-    "title": "Cả xóm 'biến' xe kéo lúa thành xe đón dâu độc đáo",
-    "content": "Tại xã Hùng Tiến, huyện Nam Đàn, Nghệ An, ông Nguyễn Văn Lộc cùng với bà con trong xóm đã cải tạo một chiếc xe kéo lúa thành xe đón dâu độc đáo cho đám cưới của đôi trẻ Nguyễn Văn Mạnh và Nguyễn Thu Hiền. Chiếc xe được trang trí kỳ công với hoa và bóng bay, mang lại kỷ niệm đáng nhớ cho ngày trọng đại. Đám cưới không chỉ tạo nên không khí vui vẻ mà còn thể hiện tình cảm và sự gắn kết của cộng đồng.",
-    "link": "https://vnexpress.net/ca-xom-bien-xe-keo-lua-thanh-xe-don-dau-doc-dao-4865817.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Cộng đồng đã làm gì để tạo nên chiếc xe đón dâu đặc biệt cho đôi trẻ?",
+    "title": "Diễn viên \"Mùi ngò gai\" giải nghệ sang Mỹ: Luôn nhớ quê, phát hiện khối u",
+    "content": "Nghệ sĩ Minh Hoàng, nổi tiếng với vai diễn trong phim \"Mùi ngò gai\", đã chọn định cư tại Mỹ từ năm 2022. Mặc dù đã tuyên bố giải nghệ, ông vẫn thể hiện tình yêu với nghệ thuật bằng cách trở lại tham gia một dự án phim mới. Gần đây, ông gặp phải lo ngại về sức khỏe khi bác sĩ phát hiện một khối u ở phổi, nhưng sau nhiều kiểm tra, may mắn là đó chỉ là u lành tính. Ông chia sẻ rằng cuộc sống ở xứ người mang lại cho ông nhiều kỷ niệm và sự bình yên, mặc dù luôn nhớ quê hương.",
+    "link": "https://dantri.com.vn/giai-tri/dien-vien-mui-ngo-gai-giai-nghe-sang-my-luon-nho-que-phat-hien-khoi-u-20250325150310170.htm",
+    "cat": "giai-tri",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Nghệ sĩ Minh Hoàng đã gặp vấn đề gì về sức khỏe gần đây?",
     "answers": [
       {
-        "text": "Cải tạo xe kéo lúa thành xe đón dâu",
+        "text": "Khối u ở phổi",
         "correct": true
       },
       {
-        "text": "Thiết kế một chiếc xe máy mới",
+        "text": "Đau tim",
         "correct": false
       },
       {
-        "text": "Thuê xe đón dâu từ ngoài",
+        "text": "Cúm nặng",
         "correct": false
       },
       {
-        "text": "Mua một chiếc xe mới hoàn toàn",
+        "text": "Gãy xương chân",
         "correct": false
       }
     ]
@@ -1982,33 +2013,6 @@
     ]
   },
   {
-    "title": "VAS tiên phong chuyển đổi số, tích hợp AI vào giảng dạy cho học sinh",
-    "content": "Trường Quốc tế Việt Úc (VAS) đang tiên phong trong việc chuyển đổi số và tích hợp trí tuệ nhân tạo (AI) vào chương trình giảng dạy cho học sinh. Được tổ chức vào ngày 15/3, hội thảo \"Tối ưu cuộc sống với AI\" thu hút sự tham gia của hơn 200 phụ huynh và 1 triệu lượt xem trực tuyến. Từ năm học 2025-2026, học sinh VAS sẽ có một tiết học về AI mỗi tuần, nhằm trang bị kỹ năng cần thiết cho thế hệ công dân số. VAS cam kết không ngừng đổi mới và phát triển để giữ vững vị thế hàng đầu trong giáo dục quốc tế tại Việt Nam.",
-    "link": "https://dantri.com.vn/giao-duc/vas-tien-phong-chuyen-doi-so-tich-hop-ai-vao-giang-day-cho-hoc-sinh-20250325141325818.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "VAS tích hợp AI vào chương trình giảng dạy như thế nào?",
-    "answers": [
-      {
-        "text": "Học sinh sẽ có một tiết học về AI mỗi tuần.",
-        "correct": true
-      },
-      {
-        "text": "Học sinh sẽ học về lịch sử AI.",
-        "correct": false
-      },
-      {
-        "text": "VAS không có chương trình dạy về AI.",
-        "correct": false
-      },
-      {
-        "text": "Học sinh chỉ học lý thuyết về AI.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bệnh lao phổi có thể chữa khỏi không?",
     "content": "Bệnh lao phổi có thể chữa khỏi hoàn toàn nếu được phát hiện sớm và điều trị theo đúng phác đồ. Tỷ lệ điều trị thành công đối với lao phổi nhạy cảm với thuốc lên đến khoảng 95%, trong khi lao kháng thuốc có tỷ lệ thành công từ 60-80%. Người bệnh cần tuân thủ nghiêm ngặt thời gian và liều lượng thuốc, đồng thời duy trì chế độ dinh dưỡng hợp lý để tăng cường sức đề kháng.",
     "link": "https://vnexpress.net/benh-lao-phoi-co-the-chua-khoi-khong-4865645.html",
@@ -2031,6 +2035,33 @@
       },
       {
         "text": "Có, nhưng chỉ với thuốc đặc trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "VAS tiên phong chuyển đổi số, tích hợp AI vào giảng dạy cho học sinh",
+    "content": "Trường Quốc tế Việt Úc (VAS) đang tiên phong trong việc chuyển đổi số và tích hợp trí tuệ nhân tạo (AI) vào chương trình giảng dạy cho học sinh. Được tổ chức vào ngày 15/3, hội thảo \"Tối ưu cuộc sống với AI\" thu hút sự tham gia của hơn 200 phụ huynh và 1 triệu lượt xem trực tuyến. Từ năm học 2025-2026, học sinh VAS sẽ có một tiết học về AI mỗi tuần, nhằm trang bị kỹ năng cần thiết cho thế hệ công dân số. VAS cam kết không ngừng đổi mới và phát triển để giữ vững vị thế hàng đầu trong giáo dục quốc tế tại Việt Nam.",
+    "link": "https://dantri.com.vn/giao-duc/vas-tien-phong-chuyen-doi-so-tich-hop-ai-vao-giang-day-cho-hoc-sinh-20250325141325818.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "VAS tích hợp AI vào chương trình giảng dạy như thế nào?",
+    "answers": [
+      {
+        "text": "Học sinh sẽ có một tiết học về AI mỗi tuần.",
+        "correct": true
+      },
+      {
+        "text": "Học sinh sẽ học về lịch sử AI.",
+        "correct": false
+      },
+      {
+        "text": "VAS không có chương trình dạy về AI.",
+        "correct": false
+      },
+      {
+        "text": "Học sinh chỉ học lý thuyết về AI.",
         "correct": false
       }
     ]
@@ -4496,68 +4527,6 @@
       },
       {
         "text": "Dị tật chân tay",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lần thứ 4 hầu tòa, bà Trương Mỹ Lan không có chồng bên cạnh",
-    "content": "Sáng 25-3, bà Trương Mỹ Lan, cựu chủ tịch Tập đoàn Vạn Thịnh Phát, đã hầu tòa lần thứ 4 trong vụ án liên quan đến lừa đảo và rửa tiền. Chồng bà, ông Chu Lập Cơ, đã không kháng cáo bản án sơ thẩm 2 năm tù và đang chấp hành án phạt 9 năm tù. Bà Lan kháng cáo toàn bộ bản án sơ thẩm, trong khi tòa án cấp phúc thẩm cũng xem xét kháng cáo của nhiều bị hại và những người có liên quan, với tổng số tiền chiếm đoạt lên đến 30.081 tỉ đồng.",
-    "link": "https://tuoitre.vn/lan-thu-4-hau-toa-ba-truong-my-lan-khong-co-chong-ben-canh-20250324101813592.htm",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Bà Trương Mỹ Lan đã hầu tòa lần thứ mấy trong vụ án này?",
-    "answers": [
-      {
-        "text": "Lần thứ 4",
-        "correct": true
-      },
-      {
-        "text": "Lần thứ 2",
-        "correct": false
-      },
-      {
-        "text": "Lần thứ 3",
-        "correct": false
-      },
-      {
-        "text": "Lần đầu",
-        "correct": false
-      },
-      {
-        "text": "Lần thứ 5",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đường trở thành bà chủ 5 nhà hàng của nàng dâu Việt ở Bỉ",
-    "content": "Đào Hồng Hải, một nàng dâu Việt ở Bỉ, đã có hành trình ấn tượng từ một sinh viên quản lý nhà hàng đến việc sở hữu năm nhà hàng tại Brussels. Sau khi gặp khó khăn trong việc tìm kiếm cơ hội việc làm, chị quyết định mở nhà hàng riêng với món phở Hà Nội. Dù đối mặt với nhiều thách thức như luật pháp phức tạp và khủng hoảng nhân sự, Hải đã thành công trong việc thu hút khách hàng với mô hình đồ ăn nhanh. Hiện tại, chị không chỉ phục vụ món ăn truyền thống mà còn đang mở rộng thực đơn để mang ẩm thực Việt đến gần hơn với thực khách châu Âu.",
-    "link": "https://vnexpress.net/duong-tro-thanh-ba-chu-5-nha-hang-cua-nang-dau-viet-o-bi-4863425.html",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Đào Hồng Hải đã mở bao nhiêu nhà hàng ở Bỉ?",
-    "answers": [
-      {
-        "text": "5",
-        "correct": true
-      },
-      {
-        "text": "3",
-        "correct": false
-      },
-      {
-        "text": "1",
-        "correct": false
-      },
-      {
-        "text": "10",
-        "correct": false
-      },
-      {
-        "text": "7",
         "correct": false
       }
     ]
