Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Tranh luận nên vay nợ mua nhà hay thuê trọ để thảnh thơi",
+    "content": "Bài viết trình bày quan điểm trái chiều giữa hai cặp vợ chồng về việc nên vay nợ mua nhà hay thuê trọ. Anh Hoàng Hùng và vợ chọn thuê trọ để tiết kiệm và có cuộc sống thoải mái, trong khi chị Thanh Thủy và chồng lại quyết định vay nợ để mua nhà, mặc dù gặp nhiều áp lực tài chính. Các chuyên gia cũng đưa ra lời khuyên rằng việc chọn mua hay thuê nhà phụ thuộc vào tình hình tài chính và mục tiêu cá nhân của từng gia đình.",
+    "link": "https://vnexpress.net/tranh-luan-nen-vay-no-mua-nha-hay-thue-tro-de-thanh-thoi-4864053.html",
+    "cat": "kinh-doanh",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Nên vay nợ mua nhà hay thuê trọ để thảnh thơi?",
+    "answers": [
+      {
+        "text": "Nên thuê trọ để tránh gánh nặng nợ nần.",
+        "correct": true
+      },
+      {
+        "text": "Luôn luôn nên mua nhà để ổn định cuộc sống.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên thuê nhà nếu thu nhập thấp.",
+        "correct": false
+      },
+      {
+        "text": "Mua nhà là lựa chọn tốt nhất cho tương lai.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mỹ nhân điền kinh Trung Quốc thừa nhận Olympic 'quá tầm'",
     "content": "Wu Yanni, một vận động viên điền kinh nữ nổi tiếng của Trung Quốc, đã thừa nhận rằng việc cạnh tranh tại Olympic là một mục tiêu quá tầm với cô. Dù vừa lập kỷ lục quốc gia ở nội dung 60m rào và có thành tích tốt thứ tư châu Á, Yanni vẫn cảm thấy khoảng cách với các đối thủ đến từ châu Âu và Mỹ là rất lớn. Cô cho biết sẽ tiếp tục nỗ lực để nâng cao kỹ thuật và hướng tới việc phá kỷ lục quốc gia ở nội dung 100m rào.",
     "link": "https://vnexpress.net/my-nhan-dien-kinh-trung-quoc-thua-nhan-olympic-qua-tam-4865869.html",
@@ -556,28 +583,28 @@
     ]
   },
   {
-    "title": "Cả xóm 'biến' xe kéo lúa thành xe đón dâu độc đáo",
-    "content": "Tại xã Hùng Tiến, huyện Nam Đàn, Nghệ An, ông Nguyễn Văn Lộc cùng với bà con trong xóm đã cải tạo một chiếc xe kéo lúa thành xe đón dâu độc đáo cho đám cưới của đôi trẻ Nguyễn Văn Mạnh và Nguyễn Thu Hiền. Chiếc xe được trang trí kỳ công với hoa và bóng bay, mang lại kỷ niệm đáng nhớ cho ngày trọng đại. Đám cưới không chỉ tạo nên không khí vui vẻ mà còn thể hiện tình cảm và sự gắn kết của cộng đồng.",
-    "link": "https://vnexpress.net/ca-xom-bien-xe-keo-lua-thanh-xe-don-dau-doc-dao-4865817.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Cộng đồng đã làm gì để tạo nên chiếc xe đón dâu đặc biệt cho đôi trẻ?",
+    "title": "Gặp 'cơn sốc điện' khi ngưng thuốc trầm cảm đột ngột",
+    "content": "Bài viết nói về trường hợp của Vũ, một người đàn ông 32 tuổi, tự ý ngừng thuốc trầm cảm và gặp phải hội chứng ngưng thuốc nghiêm trọng. Sau ba ngày không dùng thuốc, anh cảm thấy chóng mặt, buồn nôn và có cảm giác như bị điện giật trong não. Bác sĩ khuyên anh nên quay lại dùng thuốc với liều thấp hơn và giảm dần để cơ thể thích nghi. Nhiều người khác cũng gặp tình trạng tương tự khi ngừng thuốc đột ngột, dẫn đến các triệu chứng tâm lý và thể chất nghiêm trọng.",
+    "link": "https://vnexpress.net/gap-con-soc-dien-khi-ngung-thuoc-tram-cam-dot-ngot-4864993.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Nguyên nhân nào dẫn đến hội chứng ngưng thuốc trầm cảm?",
     "answers": [
       {
-        "text": "Cải tạo xe kéo lúa thành xe đón dâu",
+        "text": "Ngừng thuốc đột ngột mà không có sự hướng dẫn của bác sĩ.",
         "correct": true
       },
       {
-        "text": "Thiết kế một chiếc xe máy mới",
+        "text": "Dùng thuốc quá lâu mà không thấy hiệu quả.",
         "correct": false
       },
       {
-        "text": "Thuê xe đón dâu từ ngoài",
+        "text": "Tăng liều thuốc mà không thông báo cho bác sĩ.",
         "correct": false
       },
       {
-        "text": "Mua một chiếc xe mới hoàn toàn",
+        "text": "Sử dụng thuốc không đúng cách.",
         "correct": false
       }
     ]
@@ -632,6 +659,33 @@
       },
       {
         "text": "Gãy xương chân",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cả xóm 'biến' xe kéo lúa thành xe đón dâu độc đáo",
+    "content": "Tại xã Hùng Tiến, huyện Nam Đàn, Nghệ An, ông Nguyễn Văn Lộc cùng với bà con trong xóm đã cải tạo một chiếc xe kéo lúa thành xe đón dâu độc đáo cho đám cưới của đôi trẻ Nguyễn Văn Mạnh và Nguyễn Thu Hiền. Chiếc xe được trang trí kỳ công với hoa và bóng bay, mang lại kỷ niệm đáng nhớ cho ngày trọng đại. Đám cưới không chỉ tạo nên không khí vui vẻ mà còn thể hiện tình cảm và sự gắn kết của cộng đồng.",
+    "link": "https://vnexpress.net/ca-xom-bien-xe-keo-lua-thanh-xe-don-dau-doc-dao-4865817.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Cộng đồng đã làm gì để tạo nên chiếc xe đón dâu đặc biệt cho đôi trẻ?",
+    "answers": [
+      {
+        "text": "Cải tạo xe kéo lúa thành xe đón dâu",
+        "correct": true
+      },
+      {
+        "text": "Thiết kế một chiếc xe máy mới",
+        "correct": false
+      },
+      {
+        "text": "Thuê xe đón dâu từ ngoài",
+        "correct": false
+      },
+      {
+        "text": "Mua một chiếc xe mới hoàn toàn",
         "correct": false
       }
     ]
@@ -4810,33 +4864,6 @@
     ]
   },
   {
-    "title": "Cha là người Pháp, mẹ là người Việt, con có được song tịch không?",
-    "content": "Con gái của bạn, sinh ra và lớn lên ở Pháp với cha là người Pháp và mẹ là người Việt, có khả năng xin nhập quốc tịch Việt Nam mà không cần thôi quốc tịch Pháp. Theo Điều 19 Luật Quốc tịch Việt Nam, nếu người xin nhập quốc tịch là con đẻ của công dân Việt Nam, họ có thể được phép nhập quốc tịch Việt Nam mà không phải đáp ứng một số điều kiện. Hồ sơ cần chuẩn bị bao gồm đơn xin nhập quốc tịch, giấy khai sinh và lý lịch tư pháp.",
-    "link": "https://tuoitre.vn/cha-la-nguoi-phap-me-la-nguoi-viet-con-co-duoc-song-tich-khong-20250306121602648.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Con gái tôi có thể có song tịch không nếu cha là người Pháp và mẹ là người Việt?",
-    "answers": [
-      {
-        "text": "Có, cháu có thể xin nhập quốc tịch Việt Nam mà không phải thôi quốc tịch Pháp.",
-        "correct": true
-      },
-      {
-        "text": "Không, cháu phải thôi quốc tịch Pháp để có quốc tịch Việt Nam.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng cháu cần phải sống ở Việt Nam ít nhất 5 năm.",
-        "correct": false
-      },
-      {
-        "text": "Không, cháu không đủ điều kiện để xin quốc tịch Việt Nam.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đề xuất tăng dần tiền lương đóng BHXH bắt buộc cho học viên quân đội, công an",
     "content": "Bộ Quốc phòng vừa đề xuất điều chỉnh mức tiền lương đóng bảo hiểm xã hội (BHXH) cho học viên quân đội và công an. Theo dự thảo, trong hai năm đầu, mức lương đóng BHXH sẽ bằng hai lần mức tham chiếu, sau đó tăng dần 0,5 lần mỗi năm, tối đa đạt 4 lần mức tham chiếu. Đề xuất này nhằm khắc phục hạn chế trong quyền lợi hưu trí của các quân nhân và phù hợp với Luật BHXH sửa đổi.",
     "link": "https://vnexpress.net/de-xuat-tang-dan-tien-luong-dong-bhxh-bat-buoc-cho-hoc-vien-quan-doi-cong-an-4865318.html",
@@ -4859,6 +4886,33 @@
       },
       {
         "text": "Mức đóng BHXH sẽ không thay đổi trong 5 năm tới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cha là người Pháp, mẹ là người Việt, con có được song tịch không?",
+    "content": "Con gái của bạn, sinh ra và lớn lên ở Pháp với cha là người Pháp và mẹ là người Việt, có khả năng xin nhập quốc tịch Việt Nam mà không cần thôi quốc tịch Pháp. Theo Điều 19 Luật Quốc tịch Việt Nam, nếu người xin nhập quốc tịch là con đẻ của công dân Việt Nam, họ có thể được phép nhập quốc tịch Việt Nam mà không phải đáp ứng một số điều kiện. Hồ sơ cần chuẩn bị bao gồm đơn xin nhập quốc tịch, giấy khai sinh và lý lịch tư pháp.",
+    "link": "https://tuoitre.vn/cha-la-nguoi-phap-me-la-nguoi-viet-con-co-duoc-song-tich-khong-20250306121602648.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Con gái tôi có thể có song tịch không nếu cha là người Pháp và mẹ là người Việt?",
+    "answers": [
+      {
+        "text": "Có, cháu có thể xin nhập quốc tịch Việt Nam mà không phải thôi quốc tịch Pháp.",
+        "correct": true
+      },
+      {
+        "text": "Không, cháu phải thôi quốc tịch Pháp để có quốc tịch Việt Nam.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng cháu cần phải sống ở Việt Nam ít nhất 5 năm.",
+        "correct": false
+      },
+      {
+        "text": "Không, cháu không đủ điều kiện để xin quốc tịch Việt Nam.",
         "correct": false
       }
     ]
