--- a/home.html
+++ b/home.html
@@ -179,6 +179,37 @@
     ]
   },
   {
+    "title": "Đảng viên sinh con thứ ba trở lên không còn bị kỷ luật",
+    "content": "Theo quy định mới của Ủy ban Kiểm tra Trung ương, từ ngày 20/3, đảng viên sinh con thứ ba trở lên sẽ không còn bị áp dụng hình thức kỷ luật. Quy định này được sửa đổi nhằm đảm bảo thống nhất với các quy định pháp luật hiện hành về chính sách dân số. Trước đó, đảng viên sinh con thứ ba có thể bị kỷ luật nếu không thực hiện kế hoạch hóa gia đình, nhưng quy định này đã được bãi bỏ.",
+    "link": "https://vnexpress.net/dang-vien-sinh-con-thu-ba-tro-len-khong-con-bi-ky-luat-4865935.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đảng viên sinh con thứ ba còn bị kỷ luật không?",
+    "answers": [
+      {
+        "text": "Không",
+        "correct": true
+      },
+      {
+        "text": "Có",
+        "correct": false
+      },
+      {
+        "text": "Tùy từng trường hợp",
+        "correct": false
+      },
+      {
+        "text": "Chỉ bị kỷ luật nếu vi phạm khác",
+        "correct": false
+      },
+      {
+        "text": "Không rõ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Yamal tiếp tục đáp trả cựu danh thủ Hà Lan",
     "content": "Tiền đạo 17 tuổi Lamine Yamal đã đáp trả cựu danh thủ Hà Lan Rafael Van der Vaart bằng cách đăng tải video lên mạng xã hội sau khi Van der Vaart chỉ trích cách chơi của anh trong trận tứ kết Nations League. Trong trận lượt về, Yamal đã ghi bàn và ăn mừng bằng cách kéo quần xuống, tạo dáng trước ống kính. Sau đó, anh tiếp tục đăng video có cảnh nằm trên giường với quần kéo trễ, khẳng định phong cách trẻ trung của mình. Van der Vaart đã thừa nhận Yamal là một cầu thủ tuyệt vời, nhưng cũng nhấn mạnh rằng anh cần giữ đôi chân trên mặt đất.",
     "link": "https://vnexpress.net/yamal-tiep-tuc-dap-tra-cuu-danh-thu-ha-lan-4865752.html",
@@ -1095,33 +1126,6 @@
     ]
   },
   {
-    "title": "Các tài xế xe điện Xiaomi liên tiếp gây tai nạn",
-    "content": "Gần đây, các tài xế của siêu xe điện Xiaomi SU7 Ultra đã liên tiếp gây ra tai nạn nghiêm trọng tại thành phố Quảng Châu, Trung Quốc. Một tài xế đã tăng tốc lên gần 180 km/h vào ban đêm và đâm vào một xe đạp điện, khiến người lái bị thương nặng. Một sự cố khác cũng xảy ra khi một tài xế khác lái xe với tốc độ gần 150 km/h, dẫn đến một vụ va chạm không rõ tình trạng người liên quan. Những tai nạn này đang gây lo ngại về việc kiểm soát tốc độ và an toàn giao thông của các tài xế xe điện này.",
-    "link": "https://vnexpress.net/cac-tai-xe-xe-dien-xiaomi-lien-tiep-gay-tai-nan-4865675.html",
-    "cat": "oto-xe-may",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao các tài xế xe điện Xiaomi liên tiếp gây tai nạn?",
-    "answers": [
-      {
-        "text": "Do lái xe với tốc độ cao và không kiểm soát",
-        "correct": true
-      },
-      {
-        "text": "Vì xe điện không an toàn",
-        "correct": false
-      },
-      {
-        "text": "Do đường phố không đủ ánh sáng",
-        "correct": false
-      },
-      {
-        "text": "Vì tài xế không có kinh nghiệm",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dự kiến phương án sắp xếp phường, xã ở TP HCM",
     "content": "Dự kiến phương án sắp xếp phường, xã ở TP HCM cho thấy quận Bình Thạnh đề xuất giảm từ 15 phường xuống còn 4 phường, trong khi quận 1 dự kiến lập 2 phường mới từ 10 phường cũ. Các địa danh lịch sử như Bến Thành, Bến Nghé sẽ được giữ lại trong quá trình sắp xếp. Các quận khác như Gò Vấp, Phú Nhuận cũng đang trình phương án giảm số lượng phường, xã để phù hợp với quyết định của Bộ Chính trị.",
     "link": "https://vnexpress.net/du-kien-phuong-an-sap-xep-phuong-xa-o-tp-hcm-4865782.html",
@@ -1144,6 +1148,33 @@
       },
       {
         "text": "Sáp nhập tất cả các phường thành một đơn vị duy nhất.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Các tài xế xe điện Xiaomi liên tiếp gây tai nạn",
+    "content": "Gần đây, các tài xế của siêu xe điện Xiaomi SU7 Ultra đã liên tiếp gây ra tai nạn nghiêm trọng tại thành phố Quảng Châu, Trung Quốc. Một tài xế đã tăng tốc lên gần 180 km/h vào ban đêm và đâm vào một xe đạp điện, khiến người lái bị thương nặng. Một sự cố khác cũng xảy ra khi một tài xế khác lái xe với tốc độ gần 150 km/h, dẫn đến một vụ va chạm không rõ tình trạng người liên quan. Những tai nạn này đang gây lo ngại về việc kiểm soát tốc độ và an toàn giao thông của các tài xế xe điện này.",
+    "link": "https://vnexpress.net/cac-tai-xe-xe-dien-xiaomi-lien-tiep-gay-tai-nan-4865675.html",
+    "cat": "oto-xe-may",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao các tài xế xe điện Xiaomi liên tiếp gây tai nạn?",
+    "answers": [
+      {
+        "text": "Do lái xe với tốc độ cao và không kiểm soát",
+        "correct": true
+      },
+      {
+        "text": "Vì xe điện không an toàn",
+        "correct": false
+      },
+      {
+        "text": "Do đường phố không đủ ánh sáng",
+        "correct": false
+      },
+      {
+        "text": "Vì tài xế không có kinh nghiệm",
         "correct": false
       }
     ]
@@ -1257,37 +1288,6 @@
     ]
   },
   {
-    "title": "Sáp nhập tỉnh thành nên dựa vào nguyên tắc nào?",
-    "content": "Chuyên gia đề xuất các nguyên tắc sáp nhập tỉnh thành tại Việt Nam, tập trung vào việc tăng số lượng địa phương có biển, nâng cao sức mạnh kinh tế và đảm bảo an ninh quốc phòng. Việc sáp nhập nhằm giảm số lượng đơn vị hành chính cấp tỉnh từ 63 xuống còn khoảng một nửa, đồng thời tạo động lực phát triển bền vững cho các địa phương. Các tiêu chí sáp nhập không chỉ dựa vào quy mô dân số và diện tích mà còn cần nghiên cứu kỹ lưỡng về quy hoạch tổng thể và chiến lược phát triển kinh tế xã hội.",
-    "link": "https://vnexpress.net/sap-nhap-tinh-thanh-nen-dua-vao-nguyen-tac-nao-4865684.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Sáp nhập tỉnh thành nên dựa vào những nguyên tắc nào?",
-    "answers": [
-      {
-        "text": "Tăng tối đa số lượng địa phương có biển",
-        "correct": true
-      },
-      {
-        "text": "Giảm quy mô dân số",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường sử dụng lao động giá rẻ",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dựa vào diện tích tự nhiên",
-        "correct": false
-      },
-      {
-        "text": "Tạo ra nhiều đơn vị hành chính mới",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cố đô Huế những ngày giải phóng 50 năm trước",
     "content": "Ngày 25/3/1975, lá cờ của Quân Giải phóng miền Nam Việt Nam đã được cắm trên Kỳ đài, đánh dấu sự giải phóng hoàn toàn của cố đô Huế. Chiến dịch Huế - Đà Nẵng được thực hiện sau khi giải phóng Buôn Ma Thuột, với mục tiêu giải phóng các thành phố quan trọng này. Sau 50 năm, Huế đã trở thành một đô thị di sản hàng đầu của Việt Nam với 8 di sản văn hóa thế giới được UNESCO công nhận.",
     "link": "https://vnexpress.net/co-do-hue-nhung-ngay-giai-phong-50-nam-truoc-4865641.html",
@@ -1314,6 +1314,37 @@
       },
       {
         "text": "20/4/1975",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sáp nhập tỉnh thành nên dựa vào nguyên tắc nào?",
+    "content": "Chuyên gia đề xuất các nguyên tắc sáp nhập tỉnh thành tại Việt Nam, tập trung vào việc tăng số lượng địa phương có biển, nâng cao sức mạnh kinh tế và đảm bảo an ninh quốc phòng. Việc sáp nhập nhằm giảm số lượng đơn vị hành chính cấp tỉnh từ 63 xuống còn khoảng một nửa, đồng thời tạo động lực phát triển bền vững cho các địa phương. Các tiêu chí sáp nhập không chỉ dựa vào quy mô dân số và diện tích mà còn cần nghiên cứu kỹ lưỡng về quy hoạch tổng thể và chiến lược phát triển kinh tế xã hội.",
+    "link": "https://vnexpress.net/sap-nhap-tinh-thanh-nen-dua-vao-nguyen-tac-nao-4865684.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Sáp nhập tỉnh thành nên dựa vào những nguyên tắc nào?",
+    "answers": [
+      {
+        "text": "Tăng tối đa số lượng địa phương có biển",
+        "correct": true
+      },
+      {
+        "text": "Giảm quy mô dân số",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sử dụng lao động giá rẻ",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dựa vào diện tích tự nhiên",
+        "correct": false
+      },
+      {
+        "text": "Tạo ra nhiều đơn vị hành chính mới",
         "correct": false
       }
     ]
@@ -2127,33 +2158,6 @@
     ]
   },
   {
-    "title": "Kháng insulin gây mụn trứng cá thế nào",
-    "content": "Kháng insulin có thể làm tăng mức độ hormone androgen trong cơ thể, từ đó thúc đẩy tăng tiết bã nhờn và làm nặng thêm tình trạng mụn trứng cá. Tình trạng này thường gặp ở thanh thiếu niên và người lớn, gây ra bởi sự tích tụ đường trong máu và kích thích các tuyến sản xuất hormone. Đặc biệt, kháng insulin còn liên quan đến viêm mạn tính, làm cho tình trạng mụn trở nên nghiêm trọng hơn, đặc biệt là ở phụ nữ có hội chứng buồng trứng đa nang (PCOS). Để điều trị, cần kết hợp giữa phương pháp da liễu và thay đổi lối sống, bao gồm chế độ ăn uống lành mạnh.",
-    "link": "https://vnexpress.net/khang-insulin-gay-mun-trung-ca-the-nao-4865724.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Kháng insulin ảnh hưởng đến mụn trứng cá như thế nào?",
-    "answers": [
-      {
-        "text": "Kháng insulin làm tăng hormone androgen, gây ra mụn trứng cá.",
-        "correct": true
-      },
-      {
-        "text": "Kháng insulin không có ảnh hưởng đến mụn trứng cá.",
-        "correct": false
-      },
-      {
-        "text": "Kháng insulin chỉ gây ra các vấn đề về tiêu hóa.",
-        "correct": false
-      },
-      {
-        "text": "Kháng insulin làm giảm bã nhờn trên da.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thí sinh Ngọc Hà đạt Giải nhất thi hát trực tuyến với bản hit của Hòa Minzy",
     "content": "Thí sinh Ngọc Hà đã xuất sắc giành Giải nhất cuộc thi hát trực tuyến \"Bài ca thống nhất\" với màn trình diễn ca khúc \"Kén cá chọn canh\" của Hòa Minzy. Cuộc thi do Hội Nhạc sĩ Việt Nam tổ chức nhằm kỷ niệm 50 năm thống nhất đất nước, thu hút hơn 1.000 thí sinh tham gia. Ngọc Hà, 31 tuổi và là một nghệ sĩ đã có nhiều thành tích trong âm nhạc, đã chinh phục ban giám khảo và khán giả với giọng hát cao vút và phong cách biểu diễn ấn tượng.",
     "link": "https://dantri.com.vn/giai-tri/thi-sinh-ngoc-ha-dat-giai-nhat-thi-hat-truc-tuyen-voi-ban-hit-cua-hoa-minzy-20250325162752412.htm",
@@ -2180,6 +2184,33 @@
       },
       {
         "text": "Giải thí sinh được yêu thích nhất",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Kháng insulin gây mụn trứng cá thế nào",
+    "content": "Kháng insulin có thể làm tăng mức độ hormone androgen trong cơ thể, từ đó thúc đẩy tăng tiết bã nhờn và làm nặng thêm tình trạng mụn trứng cá. Tình trạng này thường gặp ở thanh thiếu niên và người lớn, gây ra bởi sự tích tụ đường trong máu và kích thích các tuyến sản xuất hormone. Đặc biệt, kháng insulin còn liên quan đến viêm mạn tính, làm cho tình trạng mụn trở nên nghiêm trọng hơn, đặc biệt là ở phụ nữ có hội chứng buồng trứng đa nang (PCOS). Để điều trị, cần kết hợp giữa phương pháp da liễu và thay đổi lối sống, bao gồm chế độ ăn uống lành mạnh.",
+    "link": "https://vnexpress.net/khang-insulin-gay-mun-trung-ca-the-nao-4865724.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Kháng insulin ảnh hưởng đến mụn trứng cá như thế nào?",
+    "answers": [
+      {
+        "text": "Kháng insulin làm tăng hormone androgen, gây ra mụn trứng cá.",
+        "correct": true
+      },
+      {
+        "text": "Kháng insulin không có ảnh hưởng đến mụn trứng cá.",
+        "correct": false
+      },
+      {
+        "text": "Kháng insulin chỉ gây ra các vấn đề về tiêu hóa.",
+        "correct": false
+      },
+      {
+        "text": "Kháng insulin làm giảm bã nhờn trên da.",
         "correct": false
       }
     ]
@@ -3599,6 +3630,33 @@
     ]
   },
   {
+    "title": "Làm thế nào giảm đau đầu do tăng huyết áp?",
+    "content": "Đau đầu do tăng huyết áp là triệu chứng phổ biến ở người cao tuổi, xảy ra khi huyết áp tăng cao gây áp lực lên mạch máu não. Để giảm đau đầu, người bệnh cần kiểm soát huyết áp bằng cách sử dụng thuốc theo chỉ định bác sĩ, ăn uống lành mạnh, duy trì chế độ tập thể dục đều đặn, và đảm bảo giấc ngủ đủ. Nếu cơn đau đầu kéo dài hoặc có triệu chứng nghiêm trọng khác, người bệnh nên đến cơ sở y tế để kiểm tra.",
+    "link": "https://vnexpress.net/lam-the-nao-giam-dau-dau-do-tang-huyet-ap-4865487.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để giảm đau đầu do tăng huyết áp?",
+    "answers": [
+      {
+        "text": "Kiểm soát huyết áp và duy trì lối sống lành mạnh.",
+        "correct": true
+      },
+      {
+        "text": "Uống nhiều nước lạnh.",
+        "correct": false
+      },
+      {
+        "text": "Sử dụng thuốc giảm đau tự do.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường ăn đồ ngọt.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "7 món ăn màu tím có lợi cho sức khỏe tinh thần",
     "content": "Bài viết giới thiệu bảy món ăn màu tím như cà tím, bắp cải tím, mận, và hành tím, đều chứa nhiều chất chống oxy hóa anthocyanin và có lợi cho sức khỏe tinh thần. Những thực phẩm này không chỉ hỗ trợ giấc ngủ, cải thiện sức khỏe thể chất mà còn giúp tăng cường chức năng nhận thức và giảm nguy cơ mắc các bệnh thoái hóa thần kinh. Ngoài ra, các món ăn màu tím còn giàu vitamin và khoáng chất như kali, magie, và có khả năng chống viêm và chống ung thư.",
     "link": "https://vnexpress.net/7-mon-an-mau-tim-co-loi-cho-suc-khoe-tinh-than-4865474.html",
@@ -3625,33 +3683,6 @@
       },
       {
         "text": "Dưa hấu",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Làm thế nào giảm đau đầu do tăng huyết áp?",
-    "content": "Đau đầu do tăng huyết áp là triệu chứng phổ biến ở người cao tuổi, xảy ra khi huyết áp tăng cao gây áp lực lên mạch máu não. Để giảm đau đầu, người bệnh cần kiểm soát huyết áp bằng cách sử dụng thuốc theo chỉ định bác sĩ, ăn uống lành mạnh, duy trì chế độ tập thể dục đều đặn, và đảm bảo giấc ngủ đủ. Nếu cơn đau đầu kéo dài hoặc có triệu chứng nghiêm trọng khác, người bệnh nên đến cơ sở y tế để kiểm tra.",
-    "link": "https://vnexpress.net/lam-the-nao-giam-dau-dau-do-tang-huyet-ap-4865487.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để giảm đau đầu do tăng huyết áp?",
-    "answers": [
-      {
-        "text": "Kiểm soát huyết áp và duy trì lối sống lành mạnh.",
-        "correct": true
-      },
-      {
-        "text": "Uống nhiều nước lạnh.",
-        "correct": false
-      },
-      {
-        "text": "Sử dụng thuốc giảm đau tự do.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường ăn đồ ngọt.",
         "correct": false
       }
     ]
@@ -3966,6 +3997,33 @@
     ]
   },
   {
+    "title": "Hai tháng nỗ lực cứu người nhiễm trùng nặng van tim",
+    "content": "Trong suốt hai tháng, anh Thọ, 46 tuổi, đã trải qua cuộc chiến với viêm nội tâm mạc nhiễm trùng nặng do khối sùi trên van hai lá. Bệnh nhân đã từ chối phẫu thuật trong 12 năm qua và chỉ uống thuốc khi có triệu chứng. Khi viêm nhiễm tiến triển, anh đã được phẫu thuật thay van hai lá nhân tạo và sau đó theo dõi điều trị. Hiện tại, tình trạng sức khỏe của anh đã ổn định, không còn triệu chứng và đã xuất viện.",
+    "link": "https://vnexpress.net/hai-thang-no-luc-cuu-nguoi-nhiem-trung-nang-van-tim-4864905.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Anh Thọ đã trải qua điều trị gì để phục hồi sức khỏe?",
+    "answers": [
+      {
+        "text": "Phẫu thuật thay van hai lá nhân tạo",
+        "correct": true
+      },
+      {
+        "text": "Chỉ uống thuốc kháng sinh",
+        "correct": false
+      },
+      {
+        "text": "Điều trị bằng thuốc đông y",
+        "correct": false
+      },
+      {
+        "text": "Không cần điều trị gì cả",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bé sơ sinh tắc ruột",
     "content": "Bé Minh, một trong hai bé song sinh, bị tắc ruột do dị ứng sữa công thức và phải nhập viện cấp cứu. Sau khi được điều trị, bác sĩ đã thực hiện phẫu thuật mở hậu môn tạm và sau một tháng, bé được phẫu thuật đóng lại. Tắc ruột ở trẻ sơ sinh là tình trạng cần được cấp cứu kịp thời, thường do lồng ruột hoặc các vấn đề khác về tiêu hóa. Các bác sĩ khuyến cáo nên cho trẻ bú sữa mẹ hoàn toàn trong 6 tháng đầu đời để giảm nguy cơ tắc ruột.",
     "link": "https://vnexpress.net/be-so-sinh-tac-ruot-4865383.html",
@@ -3992,33 +4050,6 @@
       },
       {
         "text": "Tiêu chảy cấp",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hai tháng nỗ lực cứu người nhiễm trùng nặng van tim",
-    "content": "Trong suốt hai tháng, anh Thọ, 46 tuổi, đã trải qua cuộc chiến với viêm nội tâm mạc nhiễm trùng nặng do khối sùi trên van hai lá. Bệnh nhân đã từ chối phẫu thuật trong 12 năm qua và chỉ uống thuốc khi có triệu chứng. Khi viêm nhiễm tiến triển, anh đã được phẫu thuật thay van hai lá nhân tạo và sau đó theo dõi điều trị. Hiện tại, tình trạng sức khỏe của anh đã ổn định, không còn triệu chứng và đã xuất viện.",
-    "link": "https://vnexpress.net/hai-thang-no-luc-cuu-nguoi-nhiem-trung-nang-van-tim-4864905.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Anh Thọ đã trải qua điều trị gì để phục hồi sức khỏe?",
-    "answers": [
-      {
-        "text": "Phẫu thuật thay van hai lá nhân tạo",
-        "correct": true
-      },
-      {
-        "text": "Chỉ uống thuốc kháng sinh",
-        "correct": false
-      },
-      {
-        "text": "Điều trị bằng thuốc đông y",
-        "correct": false
-      },
-      {
-        "text": "Không cần điều trị gì cả",
         "correct": false
       }
     ]
