--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
+    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
+    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
+    "answers": [
+      {
+        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
+        "correct": true
+      },
+      {
+        "text": "Do thay đổi ban lãnh đạo",
+        "correct": false
+      },
+      {
+        "text": "Vì áp lực từ cổ đông",
+        "correct": false
+      },
+      {
+        "text": "Do quy định mới của HNX",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Suzuki Easy 2025 - xe ga mới giá 1.600 USD",
     "content": "Suzuki vừa ra mắt mẫu xe ga mới mang tên Easy 2025 tại triển lãm Bangkok Motor Show 2025, Thái Lan. Mẫu xe này được trang bị động cơ 115 phân khối, công suất 9,3 mã lực và giá bán là 1.600 USD. Easy 2025 có thiết kế tinh chỉnh, cạnh tranh trực tiếp với Honda Scoopy và được bán ra tại nhiều thị trường khác nhau trong khu vực Đông Nam Á dưới tên gọi Next II.",
     "link": "https://vnexpress.net/suzuki-easy-2025-xe-ga-moi-gia-1-600-usd-4865445.html",
@@ -881,37 +908,6 @@
     ]
   },
   {
-    "title": "Bất ngờ phát hiện mắc hội chứng tim dễ gây đột tử",
-    "content": "Bài viết đề cập đến trường hợp của Tuấn, 19 tuổi, người vừa được phát hiện mắc hội chứng Brugada, một bệnh di truyền có nguy cơ gây đột tử ở người trẻ. Hội chứng này có thể gây ra rối loạn nhịp tim và thường xảy ra vào ban đêm khi ngủ. Mặc dù chưa có phương pháp chữa khỏi, người bệnh cần được theo dõi và điều trị để tránh các biến chứng nguy hiểm. Các bác sĩ khuyến cáo mọi người nên khám sức khỏe định kỳ để phát hiện sớm các nguy cơ bệnh lý.",
-    "link": "https://vnexpress.net/bat-ngo-phat-hien-mac-hoi-chung-tim-de-gay-dot-tu-4865841.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Hội chứng Brugada có thể gây ra biến chứng gì cho người bệnh?",
-    "answers": [
-      {
-        "text": "Đột tử",
-        "correct": true
-      },
-      {
-        "text": "Ngất xỉu",
-        "correct": false
-      },
-      {
-        "text": "Đau ngực",
-        "correct": false
-      },
-      {
-        "text": "Rối loạn tiêu hóa",
-        "correct": false
-      },
-      {
-        "text": "Bệnh tiểu đường",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tiêu cơ vân do tập squat quá sức",
     "content": "Nghĩa, 22 tuổi, đã bị tiêu cơ vân cấp sau ba ngày tập squat cường độ cao mà không có bệnh lý nền. Chẩn đoán cho thấy chỉ số creatine kinase của anh tăng cao, cho thấy tình trạng nguy hiểm có thể dẫn đến suy thận. Bác sĩ khuyến cáo rằng tiêu cơ vân có thể gây ra nhiều biến chứng nghiêm trọng, bao gồm suy đa tạng. Để phòng ngừa, người tập thể hình cần tăng cường độ từ từ và theo dõi sức khỏe của bản thân.",
     "link": "https://vnexpress.net/tieu-co-van-do-tap-squat-qua-suc-4865721.html",
@@ -938,6 +934,37 @@
       },
       {
         "text": "Sử dụng thuốc không đúng cách",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bất ngờ phát hiện mắc hội chứng tim dễ gây đột tử",
+    "content": "Bài viết đề cập đến trường hợp của Tuấn, 19 tuổi, người vừa được phát hiện mắc hội chứng Brugada, một bệnh di truyền có nguy cơ gây đột tử ở người trẻ. Hội chứng này có thể gây ra rối loạn nhịp tim và thường xảy ra vào ban đêm khi ngủ. Mặc dù chưa có phương pháp chữa khỏi, người bệnh cần được theo dõi và điều trị để tránh các biến chứng nguy hiểm. Các bác sĩ khuyến cáo mọi người nên khám sức khỏe định kỳ để phát hiện sớm các nguy cơ bệnh lý.",
+    "link": "https://vnexpress.net/bat-ngo-phat-hien-mac-hoi-chung-tim-de-gay-dot-tu-4865841.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 9,
+    "question": "Hội chứng Brugada có thể gây ra biến chứng gì cho người bệnh?",
+    "answers": [
+      {
+        "text": "Đột tử",
+        "correct": true
+      },
+      {
+        "text": "Ngất xỉu",
+        "correct": false
+      },
+      {
+        "text": "Đau ngực",
+        "correct": false
+      },
+      {
+        "text": "Rối loạn tiêu hóa",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tiểu đường",
         "correct": false
       }
     ]
@@ -2021,28 +2048,32 @@
     ]
   },
   {
-    "title": "Sếp Xiaomi thả dưa hấu từ tầng 6 chứng minh độ bền pin xe điện",
-    "content": "Giám đốc điều hành Xiaomi, Lei Jun, đã thực hiện một thử nghiệm thú vị để chứng minh độ bền của pin xe điện bằng cách thả một quả dưa hấu từ tầng 6 của nhà máy. Kết quả cho thấy quả dưa hấu không bị vỡ nhờ vào lớp bảo vệ 'áo giáp chống đạn' mà Xiaomi áp dụng cho pin xe điện SU7 Ultra. Công nghệ này giúp tăng cường độ bền và an toàn cho pin, với nhiều biện pháp bảo vệ như khung thép cường độ cao và hệ thống quản lý pin thông minh.",
-    "link": "https://vnexpress.net/sep-xiaomi-tha-dua-hau-tu-tang-6-chung-minh-do-ben-pin-xe-dien-4865604.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
+    "title": "Doãn Hải My thu hút ánh nhìn với phong cách nữ tính",
+    "content": "Doãn Hải My, vợ cầu thủ Đoàn Văn Hậu, đã thu hút được sự chú ý của giới mộ điệu thời trang với phong cách nữ tính và hiện đại. Cô đã phối đồ và lựa chọn túi xách theo xu hướng thời trang đang được ưa chuộng toàn cầu, đặc biệt là các mẫu túi mini. Thiết kế trang phục của cô mang đậm dấu ấn cá tính và thanh lịch, phù hợp với xu hướng mùa xuân hè năm nay.",
+    "link": "https://dantri.com.vn/giai-tri/doan-hai-my-thu-hut-anh-nhin-voi-phong-cach-nu-tinh-20250324173039479.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
     "importance": 7,
-    "question": "Tại sao Lei Jun lại thả dưa hấu từ tầng 6 của nhà máy?",
+    "question": "Doãn Hải My thu hút sự chú ý với phong cách gì?",
     "answers": [
       {
-        "text": "Để chứng minh độ bền của pin xe điện.",
+        "text": "Phong cách nữ tính",
         "correct": true
       },
       {
-        "text": "Để thử nghiệm độ an toàn của ô tô.",
+        "text": "Phong cách nam tính",
         "correct": false
       },
       {
-        "text": "Để quảng bá sản phẩm mới.",
+        "text": "Phong cách thể thao",
         "correct": false
       },
       {
-        "text": "Để tạo sự chú ý cho truyền thông.",
+        "text": "Phong cách truyền thống",
+        "correct": false
+      },
+      {
+        "text": "Phong cách công sở",
         "correct": false
       }
     ]
@@ -2102,32 +2133,28 @@
     ]
   },
   {
-    "title": "Doãn Hải My thu hút ánh nhìn với phong cách nữ tính",
-    "content": "Doãn Hải My, vợ cầu thủ Đoàn Văn Hậu, đã thu hút được sự chú ý của giới mộ điệu thời trang với phong cách nữ tính và hiện đại. Cô đã phối đồ và lựa chọn túi xách theo xu hướng thời trang đang được ưa chuộng toàn cầu, đặc biệt là các mẫu túi mini. Thiết kế trang phục của cô mang đậm dấu ấn cá tính và thanh lịch, phù hợp với xu hướng mùa xuân hè năm nay.",
-    "link": "https://dantri.com.vn/giai-tri/doan-hai-my-thu-hut-anh-nhin-voi-phong-cach-nu-tinh-20250324173039479.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
+    "title": "Sếp Xiaomi thả dưa hấu từ tầng 6 chứng minh độ bền pin xe điện",
+    "content": "Giám đốc điều hành Xiaomi, Lei Jun, đã thực hiện một thử nghiệm thú vị để chứng minh độ bền của pin xe điện bằng cách thả một quả dưa hấu từ tầng 6 của nhà máy. Kết quả cho thấy quả dưa hấu không bị vỡ nhờ vào lớp bảo vệ 'áo giáp chống đạn' mà Xiaomi áp dụng cho pin xe điện SU7 Ultra. Công nghệ này giúp tăng cường độ bền và an toàn cho pin, với nhiều biện pháp bảo vệ như khung thép cường độ cao và hệ thống quản lý pin thông minh.",
+    "link": "https://vnexpress.net/sep-xiaomi-tha-dua-hau-tu-tang-6-chung-minh-do-ben-pin-xe-dien-4865604.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
     "importance": 7,
-    "question": "Doãn Hải My thu hút sự chú ý với phong cách gì?",
+    "question": "Tại sao Lei Jun lại thả dưa hấu từ tầng 6 của nhà máy?",
     "answers": [
       {
-        "text": "Phong cách nữ tính",
+        "text": "Để chứng minh độ bền của pin xe điện.",
         "correct": true
       },
       {
-        "text": "Phong cách nam tính",
+        "text": "Để thử nghiệm độ an toàn của ô tô.",
         "correct": false
       },
       {
-        "text": "Phong cách thể thao",
+        "text": "Để quảng bá sản phẩm mới.",
         "correct": false
       },
       {
-        "text": "Phong cách truyền thống",
-        "correct": false
-      },
-      {
-        "text": "Phong cách công sở",
+        "text": "Để tạo sự chú ý cho truyền thông.",
         "correct": false
       }
     ]
@@ -2253,37 +2280,6 @@
     ]
   },
   {
-    "title": "U22 Trung Quốc - U22 Việt Nam: Viktor Lê đá chính",
-    "content": "U22 Việt Nam sẽ gặp U22 Trung Quốc trong trận giao hữu cuối cùng tại giải Tứ Hùng Diêm Thành. Viktor Lê được chọn đá chính trong đội hình xuất phát. Nếu Việt Nam thắng trận này, họ sẽ giành chức vô địch giải đấu, trong khi Trung Quốc hiện đang dẫn đầu với 4 điểm. Đây là trận đấu quyết định cho ngôi vô địch, với sự tham gia của bốn đội gồm Việt Nam, Trung Quốc, Hàn Quốc và Uzbekistan.",
-    "link": "https://vnexpress.net/truc-tiep-bong-da-u22-trung-quoc-vs-u22-viet-nam-4865729.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 9,
-    "question": "U22 Việt Nam có thể vô địch nếu thắng đội nào?",
-    "answers": [
-      {
-        "text": "U22 Trung Quốc",
-        "correct": true
-      },
-      {
-        "text": "U22 Hàn Quốc",
-        "correct": false
-      },
-      {
-        "text": "U22 Uzbekistan",
-        "correct": false
-      },
-      {
-        "text": "U22 Nhật Bản",
-        "correct": false
-      },
-      {
-        "text": "U22 Ấn Độ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Những thực phẩm lên men giúp tóc chắc khỏe",
     "content": "Thực phẩm lên men như sữa chua, kim chi và các sản phẩm từ đậu nành có tác dụng tốt cho sức khỏe tóc. Chúng cung cấp lợi khuẩn, vitamin B và chất chống oxy hóa, giúp nuôi dưỡng da đầu và thúc đẩy tóc mọc khỏe. Bác sĩ Hoàng Quyết Tiến cho biết, các lợi khuẩn này giúp cân bằng hệ vi sinh trên da đầu, ngăn ngừa gàu và viêm nhiễm, từ đó tạo điều kiện cho tóc phát triển tốt hơn. Tuy nhiên, cần sử dụng thực phẩm lên men một cách hợp lý để tránh ảnh hưởng xấu đến sức khỏe.",
     "link": "https://vnexpress.net/nhung-thuc-pham-len-men-giup-toc-chac-khoe-4865722.html",
@@ -2310,6 +2306,37 @@
       },
       {
         "text": "Chỉ dưa cải muối",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "U22 Trung Quốc - U22 Việt Nam: Viktor Lê đá chính",
+    "content": "U22 Việt Nam sẽ gặp U22 Trung Quốc trong trận giao hữu cuối cùng tại giải Tứ Hùng Diêm Thành. Viktor Lê được chọn đá chính trong đội hình xuất phát. Nếu Việt Nam thắng trận này, họ sẽ giành chức vô địch giải đấu, trong khi Trung Quốc hiện đang dẫn đầu với 4 điểm. Đây là trận đấu quyết định cho ngôi vô địch, với sự tham gia của bốn đội gồm Việt Nam, Trung Quốc, Hàn Quốc và Uzbekistan.",
+    "link": "https://vnexpress.net/truc-tiep-bong-da-u22-trung-quoc-vs-u22-viet-nam-4865729.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 9,
+    "question": "U22 Việt Nam có thể vô địch nếu thắng đội nào?",
+    "answers": [
+      {
+        "text": "U22 Trung Quốc",
+        "correct": true
+      },
+      {
+        "text": "U22 Hàn Quốc",
+        "correct": false
+      },
+      {
+        "text": "U22 Uzbekistan",
+        "correct": false
+      },
+      {
+        "text": "U22 Nhật Bản",
+        "correct": false
+      },
+      {
+        "text": "U22 Ấn Độ",
         "correct": false
       }
     ]
@@ -3532,33 +3559,6 @@
     ]
   },
   {
-    "title": "5 món ăn giàu kẽm giúp tăng miễn dịch",
-    "content": "Bài viết giới thiệu 5 món ăn giàu kẽm giúp tăng cường hệ miễn dịch, bao gồm hàu, thịt bò, ức gà, các loại đậu và trứng. Hàu cung cấp lượng kẽm cao nhất, tiếp theo là thịt bò và ức gà, trong khi các loại đậu và trứng cũng là nguồn cung cấp kẽm và protein tốt. Những thực phẩm này không chỉ giúp tăng cường miễn dịch mà còn hỗ trợ sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/5-mon-an-giau-kem-giup-tang-mien-dich-4865564.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những món ăn nào giúp tăng cường miễn dịch với kẽm?",
-    "answers": [
-      {
-        "text": "Hàu, thịt bò, ức gà, các loại đậu, trứng",
-        "correct": true
-      },
-      {
-        "text": "Cá hồi, chuối, dứa, hạt chia",
-        "correct": false
-      },
-      {
-        "text": "Bánh mì, bơ đậu phộng, sữa, rau chân vịt",
-        "correct": false
-      },
-      {
-        "text": "Mì tôm, nước ngọt, khoai tây chiên",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đau họng do viêm họng và trào ngược có khác nhau?",
     "content": "Đau họng do viêm họng và trào ngược họng thanh quản có những triệu chứng khác nhau. Viêm họng thường gây ra cảm giác đau, sưng đỏ và có thể sốt, trong khi trào ngược họng thường kèm theo nóng rát, ợ hơi và không có sốt. Điều trị hai loại bệnh này cũng khác nhau, với viêm họng có thể tự khỏi nhưng trào ngược cần thay đổi lối sống và điều trị nội khoa. Người bệnh nên đi khám để xác định nguyên nhân chính xác và có phương pháp điều trị phù hợp.",
     "link": "https://vnexpress.net/dau-hong-do-viem-hong-va-trao-nguoc-co-khac-nhau-4865609.html",
@@ -3581,6 +3581,33 @@
       },
       {
         "text": "Đau họng do viêm họng không liên quan đến nhiễm trùng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn giàu kẽm giúp tăng miễn dịch",
+    "content": "Bài viết giới thiệu 5 món ăn giàu kẽm giúp tăng cường hệ miễn dịch, bao gồm hàu, thịt bò, ức gà, các loại đậu và trứng. Hàu cung cấp lượng kẽm cao nhất, tiếp theo là thịt bò và ức gà, trong khi các loại đậu và trứng cũng là nguồn cung cấp kẽm và protein tốt. Những thực phẩm này không chỉ giúp tăng cường miễn dịch mà còn hỗ trợ sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/5-mon-an-giau-kem-giup-tang-mien-dich-4865564.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những món ăn nào giúp tăng cường miễn dịch với kẽm?",
+    "answers": [
+      {
+        "text": "Hàu, thịt bò, ức gà, các loại đậu, trứng",
+        "correct": true
+      },
+      {
+        "text": "Cá hồi, chuối, dứa, hạt chia",
+        "correct": false
+      },
+      {
+        "text": "Bánh mì, bơ đậu phộng, sữa, rau chân vịt",
+        "correct": false
+      },
+      {
+        "text": "Mì tôm, nước ngọt, khoai tây chiên",
         "correct": false
       }
     ]
@@ -4987,33 +5014,6 @@
       },
       {
         "text": "Vì bà không đi khám bác sĩ định kỳ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vali điện, xe điện một bánh không được dạo phố, vì sao?",
-    "content": "Bài viết đề cập đến việc vali điện và xe điện một bánh không được phép lưu thông trên đường phố tại TP.HCM. Theo quy định của pháp luật, các phương tiện này không được xem là xe thô sơ và do đó không đủ điều kiện tham gia giao thông. Người sử dụng các phương tiện này có thể bị phạt tiền nếu điều khiển trên đường phố, do tiềm ẩn nguy hiểm cho bản thân và những người tham gia giao thông khác.",
-    "link": "https://tuoitre.vn/vali-dien-xe-dien-mot-banh-khong-duoc-dao-pho-vi-sao-2025032416184161.htm",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao vali điện và xe điện một bánh không được phép lưu thông trên đường phố?",
-    "answers": [
-      {
-        "text": "Vì chúng không được xem là xe thô sơ theo quy định của pháp luật.",
-        "correct": true
-      },
-      {
-        "text": "Vì chúng có tốc độ quá cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì chúng gây ô nhiễm môi trường.",
-        "correct": false
-      },
-      {
-        "text": "Vì chúng không được thiết kế cho giao thông công cộng.",
         "correct": false
       }
     ]
