Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -108,6 +108,37 @@
     ]
   },
   {
+    "title": "Tàu cao tốc Hiệp Phước - Côn Đảo hoạt động lại",
+    "content": "Tàu cao tốc Hiệp Phước - Côn Đảo, do Công ty cổ phần tàu cao tốc Phú Quốc Express vận hành, dự kiến sẽ hoạt động trở lại từ giữa tháng 4/2025 sau gần một năm tạm dừng. Tàu Thăng Long có sức chở hơn 1.000 khách sẽ chạy giữa các cảng Hiệp Phước, Vũng Tàu và Côn Đảo. Giá vé cho hành trình từ TP HCM đến Côn Đảo không thay đổi, dao động từ 615.000 đến 1,1 triệu đồng. Việc tái khai thác tuyến tàu cao tốc này sẽ tạo thêm sự kết nối cho khu vực Đông Nam Bộ và tăng lựa chọn vận chuyển cho du khách đến Côn Đảo.",
+    "link": "https://vnexpress.net/tau-cao-toc-hiep-phuoc-con-dao-hoat-dong-lai-4866093.html",
+    "cat": "du-lich",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Khi nào tàu cao tốc Hiệp Phước - Côn Đảo hoạt động trở lại?",
+    "answers": [
+      {
+        "text": "Giữa tháng 4/2025",
+        "correct": true
+      },
+      {
+        "text": "Giữa tháng 3/2025",
+        "correct": false
+      },
+      {
+        "text": "Cuối tháng 4/2025",
+        "correct": false
+      },
+      {
+        "text": "Đầu tháng 4/2025",
+        "correct": false
+      },
+      {
+        "text": "Không xác định thời gian",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hãng hàng không mở thêm nhiều đường bay quốc tế",
     "content": "Vietnam Airlines đã công bố mở thêm nhiều đường bay quốc tế mới, bao gồm các chuyến bay đến Ấn Độ, Indonesia và Nga, với tần suất từ 3-4 chuyến mỗi tuần. Đặc biệt, hãng sẽ khai thác đường bay thẳng từ Hà Nội đến Milan (Italy) từ tháng 7, nâng tổng số đường bay thẳng đến châu Âu lên 9. Đồng thời, Vietjet Air cũng mở mới các đường bay đến Trung Quốc, Nhật Bản và Singapore, đáp ứng nhu cầu di chuyển tăng cao trong năm 2025.",
     "link": "https://vnexpress.net/hang-hang-khong-mo-them-nhieu-duong-bay-quoc-te-4865993.html",
@@ -3119,37 +3150,6 @@
     ]
   },
   {
-    "title": "U22 Trung Quốc - U22 Việt Nam: Viktor Lê đá chính",
-    "content": "U22 Việt Nam sẽ gặp U22 Trung Quốc trong trận giao hữu cuối cùng tại giải Tứ Hùng Diêm Thành. Viktor Lê được chọn đá chính trong đội hình xuất phát. Nếu Việt Nam thắng trận này, họ sẽ giành chức vô địch giải đấu, trong khi Trung Quốc hiện đang dẫn đầu với 4 điểm. Đây là trận đấu quyết định cho ngôi vô địch, với sự tham gia của bốn đội gồm Việt Nam, Trung Quốc, Hàn Quốc và Uzbekistan.",
-    "link": "https://vnexpress.net/truc-tiep-bong-da-u22-trung-quoc-vs-u22-viet-nam-4865729.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 9,
-    "question": "U22 Việt Nam có thể vô địch nếu thắng đội nào?",
-    "answers": [
-      {
-        "text": "U22 Trung Quốc",
-        "correct": true
-      },
-      {
-        "text": "U22 Hàn Quốc",
-        "correct": false
-      },
-      {
-        "text": "U22 Uzbekistan",
-        "correct": false
-      },
-      {
-        "text": "U22 Nhật Bản",
-        "correct": false
-      },
-      {
-        "text": "U22 Ấn Độ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Những thực phẩm lên men giúp tóc chắc khỏe",
     "content": "Thực phẩm lên men như sữa chua, kim chi và các sản phẩm từ đậu nành có tác dụng tốt cho sức khỏe tóc. Chúng cung cấp lợi khuẩn, vitamin B và chất chống oxy hóa, giúp nuôi dưỡng da đầu và thúc đẩy tóc mọc khỏe. Bác sĩ Hoàng Quyết Tiến cho biết, các lợi khuẩn này giúp cân bằng hệ vi sinh trên da đầu, ngăn ngừa gàu và viêm nhiễm, từ đó tạo điều kiện cho tóc phát triển tốt hơn. Tuy nhiên, cần sử dụng thực phẩm lên men một cách hợp lý để tránh ảnh hưởng xấu đến sức khỏe.",
     "link": "https://vnexpress.net/nhung-thuc-pham-len-men-giup-toc-chac-khoe-4865722.html",
@@ -3176,6 +3176,37 @@
       },
       {
         "text": "Chỉ dưa cải muối",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "U22 Trung Quốc - U22 Việt Nam: Viktor Lê đá chính",
+    "content": "U22 Việt Nam sẽ gặp U22 Trung Quốc trong trận giao hữu cuối cùng tại giải Tứ Hùng Diêm Thành. Viktor Lê được chọn đá chính trong đội hình xuất phát. Nếu Việt Nam thắng trận này, họ sẽ giành chức vô địch giải đấu, trong khi Trung Quốc hiện đang dẫn đầu với 4 điểm. Đây là trận đấu quyết định cho ngôi vô địch, với sự tham gia của bốn đội gồm Việt Nam, Trung Quốc, Hàn Quốc và Uzbekistan.",
+    "link": "https://vnexpress.net/truc-tiep-bong-da-u22-trung-quoc-vs-u22-viet-nam-4865729.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 9,
+    "question": "U22 Việt Nam có thể vô địch nếu thắng đội nào?",
+    "answers": [
+      {
+        "text": "U22 Trung Quốc",
+        "correct": true
+      },
+      {
+        "text": "U22 Hàn Quốc",
+        "correct": false
+      },
+      {
+        "text": "U22 Uzbekistan",
+        "correct": false
+      },
+      {
+        "text": "U22 Nhật Bản",
+        "correct": false
+      },
+      {
+        "text": "U22 Ấn Độ",
         "correct": false
       }
     ]
@@ -3347,33 +3378,6 @@
     ]
   },
   {
-    "title": "Cách làm món cà chua nhồi thịt",
-    "content": "Món cà chua nhồi thịt là một món ăn ngon, dễ làm và phù hợp với khẩu vị của trẻ nhỏ và người già. Nguyên liệu chính bao gồm cà chua, thịt nạc vai, mộc nhĩ và các gia vị khác. Quy trình chế biến bao gồm sơ chế cà chua, ướp thịt, nhồi nhân vào cà chua và nấu chín bằng nhiều phương pháp khác nhau như rán, nướng hoặc chiên không dầu. Thành phẩm là món cà chua nhồi thịt giữ nguyên hình dáng, có thịt mềm ngọt và sốt cà chua mịn màng.",
-    "link": "https://vnexpress.net/cach-lam-mon-ca-chua-nhoi-thit-4865726.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Cà chua nhồi thịt được làm từ những nguyên liệu gì?",
-    "answers": [
-      {
-        "text": "Cà chua, thịt nạc vai, mộc nhĩ",
-        "correct": true
-      },
-      {
-        "text": "Cà rốt, thịt bò, nấm hương",
-        "correct": false
-      },
-      {
-        "text": "Cà chua, tôm, rau cần",
-        "correct": false
-      },
-      {
-        "text": "Thịt gà, khoai tây, hành tây",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thí sinh Ngọc Hà đạt Giải nhất thi hát trực tuyến với bản hit của Hòa Minzy",
     "content": "Thí sinh Ngọc Hà đã xuất sắc giành Giải nhất cuộc thi hát trực tuyến \"Bài ca thống nhất\" với màn trình diễn ca khúc \"Kén cá chọn canh\" của Hòa Minzy. Cuộc thi do Hội Nhạc sĩ Việt Nam tổ chức nhằm kỷ niệm 50 năm thống nhất đất nước, thu hút hơn 1.000 thí sinh tham gia. Ngọc Hà, 31 tuổi và là một nghệ sĩ đã có nhiều thành tích trong âm nhạc, đã chinh phục ban giám khảo và khán giả với giọng hát cao vút và phong cách biểu diễn ấn tượng.",
     "link": "https://dantri.com.vn/giai-tri/thi-sinh-ngoc-ha-dat-giai-nhat-thi-hat-truc-tuyen-voi-ban-hit-cua-hoa-minzy-20250325162752412.htm",
@@ -3427,6 +3431,33 @@
       },
       {
         "text": "Kháng insulin làm giảm bã nhờn trên da.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cách làm món cà chua nhồi thịt",
+    "content": "Món cà chua nhồi thịt là một món ăn ngon, dễ làm và phù hợp với khẩu vị của trẻ nhỏ và người già. Nguyên liệu chính bao gồm cà chua, thịt nạc vai, mộc nhĩ và các gia vị khác. Quy trình chế biến bao gồm sơ chế cà chua, ướp thịt, nhồi nhân vào cà chua và nấu chín bằng nhiều phương pháp khác nhau như rán, nướng hoặc chiên không dầu. Thành phẩm là món cà chua nhồi thịt giữ nguyên hình dáng, có thịt mềm ngọt và sốt cà chua mịn màng.",
+    "link": "https://vnexpress.net/cach-lam-mon-ca-chua-nhoi-thit-4865726.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Cà chua nhồi thịt được làm từ những nguyên liệu gì?",
+    "answers": [
+      {
+        "text": "Cà chua, thịt nạc vai, mộc nhĩ",
+        "correct": true
+      },
+      {
+        "text": "Cà rốt, thịt bò, nấm hương",
+        "correct": false
+      },
+      {
+        "text": "Cà chua, tôm, rau cần",
+        "correct": false
+      },
+      {
+        "text": "Thịt gà, khoai tây, hành tây",
         "correct": false
       }
     ]
