Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Bà Trương Mỹ Lan khóc, xin giảm nhẹ cho cấp dưới",
+    "content": "Bà Trương Mỹ Lan, chủ tịch Hội đồng quản trị Tập đoàn Vạn Thịnh Phát, đã xuất hiện tại tòa án trong phiên xét xử phúc thẩm về các cáo buộc lừa đảo và rửa tiền. Trong khi khẳng định rằng bà nhận hết trách nhiệm về những cáo buộc đối với mình, bà bày tỏ mong muốn giảm nhẹ án phạt cho các cấp dưới, cho rằng họ chỉ làm công ăn lương. Bà Lan cũng khẳng định rằng các cáo buộc về vai trò 'chủ mưu' của mình là không đúng và bày tỏ sự đau khổ trước những lời cáo buộc này.",
+    "link": "https://tuoitre.vn/ba-truong-my-lan-khoc-xin-giam-nhe-cho-cap-duoi-20250326133334678.htm",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao bà Trương Mỹ Lan xin giảm nhẹ cho các cấp dưới?",
+    "answers": [
+      {
+        "text": "Bà muốn giảm nhẹ án phạt cho những người chỉ làm công ăn lương.",
+        "correct": true
+      },
+      {
+        "text": "Bà muốn được tha thứ hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Bà không muốn hầu tòa nữa.",
+        "correct": false
+      },
+      {
+        "text": "Bà cảm thấy mình vô tội.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Andre Agassi: 'Tiềm năng pickleball Việt Nam rất lớn'",
     "content": "Huyền thoại quần vợt Andre Agassi đã đến Việt Nam và bày tỏ sự tiếc nuối vì không đến sớm hơn. Ông tin rằng tiềm năng phát triển pickleball tại Việt Nam là rất lớn, nhấn mạnh sự yêu thích và năng lượng của người dân dành cho môn thể thao này. Agassi cùng các ngôi sao pickleball khác đang có mặt tại TP HCM để giao lưu và chia sẻ kinh nghiệm với người chơi Việt Nam, đồng thời khuyến khích việc tạo ra sân chơi và các hoạt động luyện tập cho người chơi.",
     "link": "https://vnexpress.net/andre-agassi-tiem-nang-pickleball-viet-nam-rat-lon-4866206.html",
